syntax = "proto3";

option java_package = "via.sep3.grpc.user";


message EmptyMessage {

}
message UserMessage{
  string username = 1;
  string password = 2;
  string firstname = 3;
  string lastname = 4;
  string address = 5;
  string phone = 6;
  string email = 7;
  string role = 8;
}

message LoginMessage{
  string username = 1;
  string password = 2;
}

message RoleMessage{
  string role = 1;
}

message TypeOfUsersMessage{
  string role = 1 ;
}
message ListOfUsers{
  repeated UserMessage userMessage = 1 ;
}
message UserNameMessage{
  string username = 1;
}

service UserService{
  rpc createUser(UserMessage) returns(EmptyMessage);
  rpc login(LoginMessage) returns(RoleMessage);
  rpc getUsersByRole(TypeOfUsersMessage) returns (ListOfUsers);
  rpc deleteUser(UserNameMessage) returns(EmptyMessage);
}
